Minor reworking of old content
Basically formatting better as markdown.
Links are now internal rather than to previous version.
Minor other tweaks.

--- a/content/posts/2007/2007-05-06-good-news.md
+++ b/content/posts/2007/2007-05-06-good-news.md
@@ -9,4 +9,7 @@ categories:
 - politics
 ---
 
-[Reid to resign with Blair](http://politics.guardian.co.uk/news/story/0,,2073828,00.html) - if only a few of the other [utterly incompetent idiots](http://en.wikipedia.org/wiki/Patricia_Hewitt) would go to.
+[Reid to resign with
+[Blair](http://politics.guardian.co.uk/news/story/0,,2073828,00.html) - if
+[only a few of the other [utterly incompetent
+[idiots](http://en.wikipedia.org/wiki/Patricia_Hewitt) would go to.
