--- a/content/posts/2007/2007-06-02-more-bees.md
+++ b/content/posts/2007/2007-06-02-more-bees.md
@@ -9,7 +9,21 @@ categories:
 - theatre
 ---
 
-I'm back in theatre again - this time to stage manage a production of [How To Succeed in Business Without Really Trying](http://www.theatrehistory.com/american/musical018.html).  The [bees](http://nailing-jelly.blogspot.com/2007/05/of-bands-and-bums.html) are also back.  There were many wandering around and dying on stage in the morning - then I found one on a cloth I was tying up to a flying bar (it didn't like being found and stung me).
-Setting lights was a problem because the things are attracted to them when on - my colleague also picked up a sting then.
-Later we rigged an insect killer up on a flying bar near the root - it appeared to be picking up a large number of victims.
-These are supposed to be Masonry Bees - which apparently are unable to penetrate human skin.  However several of us were stung.  Hopefully the maintenance guys can do something about them after the weekend.
+I'm back in theatre again - this time to stage manage a production of [How To
+Succeed in Business Without Really
+Trying](http://www.theatrehistory.com/american/musical018.html).
+
+The [bees](/2007/05/06/of-bands-and-bums/) are also back.  There were many
+wandering around and dying on stage in the morning - then I found one on a
+cloth I was tying up to a flying bar (it didn't like being found and stung
+me).
+
+Setting lights was a problem because the things are attracted to them when on
+- my colleague also picked up a sting then.
+
+Later we rigged an insect killer up on a flying bar near the root - it
+appeared to be picking up a large number of victims.
+
+These are supposed to be Masonry Bees - which apparently are unable to
+penetrate human skin.  However several of us were stung.  Hopefully the
+maintenance guys can do something about them after the weekend.
