--- a/content/posts/2009/2009-04-18-smokin.md
+++ b/content/posts/2009/2009-04-18-smokin.md
@@ -12,10 +12,24 @@ categories:
 - theatre
 ---
 
-I'm stage managing the musical version of _The Railway Children_ this week.  The producing company has seen fit to obtain 4 (really!) smoke machines (_and_ a hazer).
+I'm stage managing the musical version of _The Railway Children_ this week. 
+The producing company has seen fit to obtain 4 (really!) smoke machines (_and_
+a hazer).
 
-Obviously with all this kit to play with - 2 of the smoke machines were big brutes with DMX interfaces - we needed to test them out.  So I rigged one of the DMX controlled ones at the front of stage, set its address, isolated the fire alarm zones covering auditorium, stage, backstage and roof space.  The initial test went swimmingly - and I then found that if you ran it at 10% the machine gave a puff of smoke every few seconds with a fairly realistic train noise.
+Obviously with all this kit to play with - 2 of the smoke machines were big
+brutes with DMX interfaces - we needed to test them out.  So I rigged one of
+the DMX controlled ones at the front of stage, set its address, isolated the
+fire alarm zones covering auditorium, stage, backstage and roof space.  The
+initial test went swimmingly - and I then found that if you ran it at 10% the
+machine gave a puff of smoke every few seconds with a fairly realistic train
+noise.
 
-Unforunately this smoke was coming off the front of stage and dropping straight into the orchestra pit, and I then watched with sudden horrified realisation as the smoke was pulled straight back into the newly installed air recirculation system which pulls air in at the back of the orchestra pit and then pumps it back through the heating system.  That circuit has another smoke detector in it - on a different zone.  2 seconds later the alarms went off!!!
+Unforunately this smoke was coming off the front of stage and dropping
+straight into the orchestra pit, and I then watched with sudden horrified
+realisation as the smoke was pulled straight back into the newly installed air
+recirculation system which pulls air in at the back of the orchestra pit and
+then pumps it back through the heating system.  That circuit has another smoke
+detector in it - on a different zone.  2 seconds later the alarms went off!!!
 
-Lesson learned: now we need to switch off a total of 4 of the 6 zones within the theatre whenever smoke is used on stage.
+Lesson learned: now we need to switch off a total of 4 of the 6 zones within
+the theatre whenever smoke is used on stage.
